Fixed some fundamental errors in the code, updated README, added the users SQL database and added ability to add entries to the users db by filling the new user registration form. Login now checks with the users db and only logs you in if you have registered already

--- a/templates/register.html
+++ b/templates/register.html
@@ -11,7 +11,7 @@
                 background-color: #f4f4f4;
                 margin: 0;
             }
-            .login-container {
+            .container {
                 background: white;
                 padding: 20px;
                 border-radius: 10px;
@@ -42,9 +42,9 @@
         </style>
     </head>
     <body>
-        <div class="login-container">
+        <div class="container">
             <h2>New User Registration</h2>
-            <form action="/" method="post">
+            <form action="/register" method="post">
                 <input type="text" name="email" placeholder="Email" required>
                 <input type="password" name="password" placeholder="Password" required>               
                 <button type="submit">Sign Up</button>
